<resources>
    <string name="app_name">DiarySchool</string>

    <string name="Diary">Diary beta</string>

    <string name="search_title">Search</string>

    <string name="menu_item_notification">Notification</string>
    <string name="menu_item_settings">Setting</string>
    <string name="menu_item_Exit">Exit</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="tab_navigation_History">Diary</string>
    <string name="tab_navigation_Ideas">Schedule</string>
    <string name="tab_navigation_TODO">Dz</string>
    <string name="tab_navigation_Site">Site</string>

    <string name="btn_monday">Monday</string>
    <string name="btn_tuesday">Tuesday</string>
    <string name="btn_wednesday">Wednesday</string>
    <string name="btn_thursday">Thursday</string>
    <string name="btn_friday">Friday</string>
    <string name="btn_saturday">Saturday</string>
    <string name="send_shedule">Send Shedule</string>


</resources>
